<resources>
    <string name="app_name">DemaStore</string>
    <string name="about_david">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam posuere quam a dui aliquet pulvinar. Pellentesque eget enim scelerisque, maximus velit vitae, interdum sapien. Phasellus euismod iaculis neque sit amet imperdiet. Vivamus faucibus quam non sollicitudin bibendum. Morbi convallis efficitur felis, in tristique elit blandit tristique. Aliquam elementum mollis mauris, quis placerat augue condimentum rutrum. Suspendisse ut arcu at lorem hendrerit consectetur sed bibendum leo. Sed sed interdum orci. In mattis, felis eget pretium porttitor, libero sem blandit turpis, at commodo justo sem ac dolor.  Phasellus arcu dui, laoreet eget euismod ut, molestie at justo. Maecenas varius nibh sit amet neque sagittis, vel pretium ex laoreet. Morbi vel pulvinar turpis. Nam pulvinar auctor mauris, in rutrum nulla blandit sed. Nulla viverra ligula ante, et vehicula odio pulvinar nec. Pellentesque id molestie dui. Ut dictum massa purus, eu fermentum ante ornare vitae. Nulla sagittis sem sed sapien tristique, at iaculis leo fringilla. Fusce nec consectetur mi, vitae facilisis lacus. Vestibulum eu purus diam. Maecenas bibendum justo eu ante tincidunt dignissim.  Curabitur vehicula varius felis ac pulvinar. Praesent iaculis tempus urna, et consectetur ligula posuere a. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris ornare nisi sed aliquet vehicula. Ut dignissim sed metus id suscipit. Fusce dui ex, tempus non mollis ac, scelerisque nec ante. Praesent placerat suscipit dolor, sed maximus leo. Sed ac ligula in justo sollicitudin viverra.  Aliquam erat volutpat. Aliquam erat volutpat. Maecenas egestas nulla ac augue rutrum viverra. Quisque ullamcorper eros eget velit condimentum, in consequat ligula laoreet. Mauris vel est ac velit pretium interdum. Donec ut sapien nec tortor gravida mollis in vitae est. Sed dignissim varius neque, sit amet pretium erat laoreet non.  Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec non ipsum at neque euismod lobortis. Cras lacinia vestibulum tellus, eget hendrerit ipsum porta nec. Sed molestie nunc quis condimentum ultricies. Nam et ante elementum, elementum felis nec, ullamcorper risus. Vestibulum fringilla nisl quis sollicitudin mattis. Nulla facilisi. Donec et sapien imperdiet, feugiat lorem in, lacinia nulla. Quisque imperdiet pulvinar ipsum, ac egestas lectus maximus ac. Ut blandit porttitor sollicitudin. Proin vel quam a nibh blandit eleifend. Duis egestas est orci, vel vulputate mi fermentum sit amet. Nam quis magna posuere, mollis sem sit amet, sagittis elit.</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="basket">Basket</string>
    <string name="profile">Profile</string>
    <string name="new_collection">New Collection</string>
    <string name="popular_product">Popular Products</string>
    <string name="sale">Sale</string>
    <string name="more">More</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="currency">EGP</string>
</resources>