<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/store"
        android:icon="@drawable/ic_store_24"
        android:title="@string/store"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/basket"
        android:icon="@drawable/ic_shopping_basket_24"
        android:title="@string/basket"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>